clusters/homelab/vault/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-redirect
  namespace: vault
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: http
  hostnames:
  - vault.itruslan.ru
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.itruslan.ru
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: https
  hostnames:
  - vault.itruslan.ru
  rules:
  - backendRefs:
    - name: vault-active
      port: 8200
